--- a/signup.html
+++ b/signup.html
@@ -6,7 +6,7 @@
     <title>Signup form</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
-    <link rel="stylesheet" href="asssets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
 <main>
