--- a/signup.html
+++ b/signup.html
@@ -43,7 +43,7 @@
     </div>
     <button>Login</button>
     <div class="new_account">
-      Have account ? <a href="login.html">Log in</a>
+      Have account ? <a href="index.html">Log in</a>
     </div>
   </form>
 </main>
