--- a/forgot.html
+++ b/forgot.html
@@ -28,7 +28,7 @@
     </div>
     <button>Login</button>
     <div class="new_account">
-      Back to Login? <a href="index.html">Sign up</a>
+      Back to Login? <a href="index.html">Log in</a>
     </div>
   </form>
 </main>
